--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>blblblbl</title>
+    <title>Time is out of joint</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <H1>blblblbll</H1>
-    <p>yoyoyoyo</p>
+    <H1>Lain</H1>
+    <p>
+         :<br />
+        <img src="file:///Users/gouyer/Downloads/1533251318-17202826-1560674580628176-6724960021272027628-n.jpg" alt="Lain" />
+    </p>   
 </body>
 </html>
 
